...
<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- General terms -->
    <string name="app_name">Pocket Code</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="done">Done</string>

    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cut">Cut</string>
    <string name="move">Move</string>
    <string name="backpack_add">Add to backpack</string>
    <string name="backpack">Backpack</string>
    <string name="packing">Pack</string>
...
    <string name="loading_facebook_exchange_token">Facebook token is exchanged on our server…</string>
    <string name="loading_facebook_login">Facebook login is completed on our server…</string>
    <string name="loading_google_exchange_code">Google+ code is exchanged on our server…</string>
    <string name="loading_google_login">Google+ login is completed on our server…</string>
    <string name="background">Background</string>
    <string name="stage">Stage</string>
    <string name="ok">OK</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>
    <string name="name_exists">Name already exists</string>
    <string name="no_name">No name</string>
...
    <!-- Sprite activity -->
    <string name="copy_sprite_name_suffix">_Copy</string>
    <!--  -->


    <!-- Script activity -->
    <string name="scripts">Scripts</string>
    <string name="look">Look</string>
    <string name="looks">Looks</string>
    <string name="sound">Sound</string>
    <string name="sounds">Sounds</string>
    <string name="backgrounds">Backgrounds</string>
    <string name="size">Size:</string>
    <string name="script_group">Script group</string>
    <string name="script_groups">Script groups</string>
    <string name="script_group_name_given">A group with this name already exists. Please choose a different one!</string>
    <string name="group_or_object_name_given">A group or object with this name already exists. Please choose a
...
    <string name="backpack_replace_sound_multiple">Sounds already exist in the backpack. Do you want to replace them?</string>
    <!--  -->


    <!-- NfcTags fragment -->
    <string name="fragment_nfctag_text_description">Scan tags to add</string>
    <string name="rename_nfctag_dialog">Rename NFC tag</string>
    <string name="nfctagname_invalid">This  NFC tag\'s name is invalid</string>
    <string name="nfctag_scan">scan</string>
    <string name="delete_nfctag_dialog">Delete NFC tag?</string>
    <string name="dialog_confirm_delete_nfctag_title">Delete this NFC tag?</string>
    <string name="dialog_confirm_delete_multiple_nfctags_title">Delete these NFC tags?</string>
    <string name="dialog_confirm_delete_nfctag_message">This cannot be undone!</string>
...
    <string name="nfctag">NFC tag</string>
    <string name="nfctags">NFC tags</string>
    <string name="uid">ID</string>
    <string name="ndef_record_label">as NDEF record type</string>
    <string name="brick_set_nfc_tag">Set next NFC tag to</string>
    <string name="brick_set_nfc_tag_default_value">www.catrobat.org</string>
    <string name="default_tag_name">nfc_tag</string>
    <string name="tnf_empty">Empty</string>
    <string name="tnf_external_type">External type</string>
    <string name="tnf_mime_media">Text</string>
    <string name="tnf_well_known_http">HTTP</string>
    <string name="tnf_well_known_https">HTTPS</string>
    <string name="tnf_well_known_tel">Phone number</string>
...
    <string name="new_broadcast_message">New…</string>
    <string name="dialog_new_broadcast_message_title">New message</string>
    <string name="dialog_new_broadcast_message_name">message:</string>
    <!--  -->

    <!-- NFC spinner -->
    <string name="new_nfc_tag">New…</string>
    <string name="brick_when_nfc_default_all">all</string>
    <!-- -->


    <!-- Brick categories -->
    <string name="categories">Categories</string>
    <string name="category_motion">Motion</string>
...
    <string name="brick_when">When tapped</string>
    <string name="brick_when_condition_when">When</string>
    <string name="brick_when_becomes_true">becomes true</string>
    <string name="brick_wait">Wait</string>
    <string name="brick_when_gamepad_button">When gamepad button</string >
    <string name="brick_when_gamepad_button_tapped" >tapped</string >
    <string name="brick_when_nfc">When NFC</string>
    <string name="brick_stop_script">Stop</string>
    <string name="brick_stop_this_script">this script</string>
    <string name="brick_stop_all_scripts">all scripts</string>
    <string name="brick_stop_other_scripts">other scripts of this object</string>


...
